# mtl-wfirma-python-sdk

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/workflows/: release.yaml
examples/: demo.py
examples/fastapi_app/: GOOGLE_SHEETS_SETUP.md  README.md  main.py  requirements.txt
examples/fastapi_app/templates/: base.html  cashflow.html  clients.html  currencies.html  google_sheets.html  invoices.html  overview.html  summary.html  transactions.html
tests/: test_basic.py
wfirma_sdk/: __init__.py  client.py  exceptions.py
wfirma_sdk/resources/: __init__.py  company_accounts.py  contractors.py  invoices.py
