[tool.poetry]
name = "mtl-wfirma-python-sdk"
version = "0.0.1"
description = "A tiny Python SDK for wFirma.pl API (unofficial)"
authors = ["MusicTech Lab <mariusz.smenzyk@musictechlab.io>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/musictechlab/mtl-wfirma-python-sdk"
repository = "https://github.com/musictechlab/mtl-wfirma-python-sdk"
keywords = ["wfirma", "sdk", "api"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries"
]
packages = [{ include = "wfirma_sdk" }]

[tool.poetry.dependencies]
# Sugeruję obniżyć, żeby SDK działało u większej liczby devów/CI:
python = ">=3.9,<4.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"

# (opcjonalnie) jeśli naprawdę używasz Pydantic w SDK, zostaw:
# pydantic = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.4.0"
black = "^24.0.0"
flake8 = "^7.0.0"
coverage = "^7.0.0"
codecov = "^2.1.0"
autopep8 = "^2.0.0"
click = "^8.1.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"